# price_prediction

./: .gitignore  README.md  ai.py  app.py  policy.json  policy_PolicyAnalysis.json  policy_PolicySummary.json  prompt.md  pyproject.toml  requirements.txt  start.ps1  utils.py
data/: data.xlsx  ppp_1990_2024.xls  ppp_2020_2023.xlsx
data/policy/: aifa.txt  amcp.txt  cms.txt  fda.txt  goodwindlaw.txt  lexology.txt  links.json  phrma.txt  policy_analysis_response.txt  simon_kucher.txt
pages/: MFN Dashboard.py  Policy.py
