[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price_prediction"
version = "0.1.0"
description = "A small price prediction app"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name="Mukesh" } ]
license = { text = "MIT" }

dependencies = [
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "streamlit>=1.52.0",
  "xlrd>=2.0.0",
  "openpyxl>=3.1.0",
  "XlsxWriter>=3.2.5"
]


